<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_group_title_personal_settings">
        <EditTextPreference
            android:defaultValue="@string/pref_default_age"
            android:inputType="number"
            android:key="@string/pref_age"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_age"
            android:maxLength="2"/>
        <EditTextPreference
            android:defaultValue="@string/pref_default_height"
            android:inputType="number"
            android:key="@string/pref_height"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_height"
            android:maxLength="3"/>
        <EditTextPreference
            android:defaultValue="@string/pref_default_weight"
            android:inputType="numberDecimal"
            android:key="@string/pref_weight"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_weight"
            android:maxLength="6"/>
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_keys_gender"
            android:entryValues="@array/pref_values_gender"
            android:key="@string/pref_gender"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_gender"/>
    </PreferenceCategory>
</PreferenceScreen>
