<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_notification">
        <SwitchPreference
            android:key="@string/pref_notification_motivation_alert_enabled"
            android:title="@string/pref_title_motivation_alert_switch"
            android:defaultValue="false"/>

        <!-- default is 18:00 -->
        <org.secuso.privacyfriendlyintervaltimer.preferences.TimePreference
            android:defaultValue="64800000"
            android:key="@string/pref_notification_motivation_alert_time"
            android:title="@string/pref_title_notification_motivation_alert_time" />

        <Preference
            android:title="@string/pref_notification_motivation_alert_texts"
            android:key="@string/pref_notification_motivation_texts">
            <!--
                        <intent
                            android:targetClass="org.secuso.privacyfriendlytraining.activities.MotivationAlertTextsActivity"
                            android:targetPackage="org.secuso.privacyfriendlytraining" />
                            -->
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
