<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_workout">
        <SwitchPreference
            android:id="@+id/pref_keep_screen_on_switch"
            android:key="pref_keep_screen_on_switch"
            android:title="@string/pref_keep_screen_on_switch"
            android:summary="@string/pref_keep_screen_on_switch_summary"
            android:defaultValue="true"/>

        <SwitchPreference
            android:id="@+id/pref_start_timer_switch"
            android:key="pref_start_timer_switch"
            android:title="@string/pref_start_timer_switch"
            android:summary="@string/pref_start_timer_switch_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_notification">
        <SwitchPreference
            android:id="@+id/pref_motivation_alert_switch"
            android:key="pref_motivation_alert_switch"
            android:title="@string/pref_motivation_alert_switch"
            android:defaultValue="false"/>

        <Preference android:title="@string/pref_notification_motivation_alert_texts">
            <intent
                android:targetClass="org.secuso.privacyfriendlytraining.activities.MotivationAlertTextsActivity"
                android:targetPackage="org.secuso.privacyfriendlytraining" />
        </Preference>

    </PreferenceCategory>


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
