<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/cardview_default_margin"
        android:layout_marginLeft="@dimen/cardview_default_margin"
        android:layout_marginRight="@dimen/cardview_default_margin"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/prev_btn"
                    style="@style/SimpleImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_chevron_left_black_24dp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.00">

                    <TextView
                        android:id="@+id/period"
                        style="@style/CardViewPrimaryTitle"
                        android:layout_width="match_parent"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/periodSubtitle"
                        style="@style/CardViewSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/period"
                        android:gravity="center"
                        android:text="@string/activity_summary_subtitle" />

                </RelativeLayout>

                <ImageButton
                    android:id="@+id/next_btn"
                    style="@style/SimpleImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_chevron_right_black_24dp" />
            </LinearLayout>

            <LinearLayout
                style="@style/CardViewBody"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="60dp"
                            android:layout_marginStart="60dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_clock_24dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/calorieIcon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentRight="false"
                            android:layout_alignParentTop="false"
                            android:layout_centerHorizontal="true"
                            android:layout_marginEnd="58dp"
                            android:layout_marginRight="58dp"
                            android:src="@drawable/ic_fire_24dp" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/timeCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentStart="false"
                            android:layout_alignParentTop="false"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/calorieCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/timeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="false"
                            android:layout_centerHorizontal="true"
                            android:text="@string/action_time"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/calorieTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/summary_card_calories"
                            android:textColor="@color/black" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>